fixed up hamburger menu on mobile

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -7,15 +7,19 @@ main.container {
     padding-top: 36px;
 }
 
-.bg-main {
+.bg-primary {
     background: url(../images/menu_gray_bg.png);
-    background-color: transparent;
-    height: 65px;
+    background-color: transparent !important;    
     box-shadow: 0px 0px 5px #000;
+    padding: 0px;
+}
+
+.navbar-brand {
+    padding: 0;
 }
 
 .navbar-brand img {
-    height: 65px;
+    height: 56px;
 }
 
 div#form-results.container {
